# ex2

./: .gitignore  CMakelists.txt  SortedList.cpp  SortedList.h  dry.docx  examDetails.cpp  examDetails.h  main.cpp  part_a_test.cpp  playground.cpp  sortedList.h
part2/: CMakeLists.txt  Character.cpp  Character.h  Exception.cpp  Exceptions.h  Game.cpp  Game.h  Medic.cpp  Medic.h  Sniper.cpp  Sniper.h  Soldier.cpp  Soldier.h  Tests.cpp  almogtest.cpp  gameTest.cpp  output_example_1.txt  output_example_2.txt  output_example_3.txt  output_example_4.txt  output_example_5.txt
partA/: CMakeLists.txt  examDetails.cpp  examDetails.h  part_a_test.cpp  sortedList.h
